--- a/aula6/cadastro/cadastro.html
+++ b/aula6/cadastro/cadastro.html
@@ -19,7 +19,7 @@
         </ div >
         < button  type =" submit " > Salvar </ button >
 
-    </ formulário >
+    </ form>
     
 </ corpo >
 </ html >
